# oxifft

./: .gitignore  BENCHMARKING.md  BENCHMARK_RESULTS_TEMPLATE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  PROJECT_STATUS.md  README.md  TESTING.md  TODO.md  oxifft.md
docs/: developer_guide_simd.md  developer_guide_solvers.md  migration_v0_to_v1.md  no_std.md  wisdom_format.md
oxifft/: Cargo.toml  README.md  build.rs
oxifft-bench/: Cargo.toml  README.md
oxifft-bench/benches/: codelet_perf.rs  dct_dst.rs  fft_comparison.rs  fftw_parity_gates.rs  r2c_c2r.rs
oxifft-bench/examples/: bench_composite.rs  codelet_test.rs  compare_composite.rs  compare_fft.rs  direct_test.rs  perf_test.rs  profile_fft.rs  quick_perf_test.rs
oxifft-bench/src/: fftw_utils.rs  lib.rs  utils.rs
oxifft-bench/tests/: fftw_comparison.rs  fftw_parity_smoke.rs
oxifft-codegen/: Cargo.toml  README.md  TODO.md
oxifft-codegen-impl/: Cargo.toml  README.md
oxifft-codegen-impl/src/: gen_any.rs  gen_mixed_radix.rs  gen_notw.rs  gen_odd.rs  gen_rader.rs  gen_rdft.rs  gen_twiddle.rs  lib.rs  symbolic.rs  symbolic_emit.rs  symbolic_tests.rs  winograd_constants.rs
oxifft-codegen-impl/src/gen_simd/: avx.rs  avx2.rs  avx512.rs  mod.rs  neon.rs  runtime_dispatch.rs  scalar.rs  sse2.rs
oxifft-codegen-impl/src/gen_simd/multi_transform/: mod.rs  scalar.rs  simd_avx2_f32.rs  simd_sse2_f32.rs  tests.rs
oxifft-codegen-impl/tests/: gen_any.rs
oxifft-codegen/benches/: codegen_time.rs  codegen_time_stub.rs
oxifft-codegen/examples/: code_size_report.rs
oxifft-codegen/src/: gen_notw.rs  gen_simd.rs  gen_twiddle.rs  lib.rs  symbolic.rs
oxifft-codegen/tests/: multi_transform_soa_parity.rs  notw_small_sizes.rs  opt_passes_16_64.rs  rdft_codelets.rs  simd_f32_parity.rs  ui.rs
oxifft-codegen/tests/compile_fail/: gen_odd_unknown_size.rs  gen_odd_unknown_size.stderr  gen_rader_unknown_prime.rs  gen_rader_unknown_prime.stderr  notw_empty_input.rs  notw_empty_input.stderr  notw_non_literal.rs  notw_non_literal.stderr  notw_unknown_size.rs  notw_unknown_size.stderr  twiddle_unknown_radix.rs  twiddle_unknown_radix.stderr
oxifft/benches/: beyond_fftw.rs  cooley_tukey_scaling.rs  dct_benchmarks.rs  dft_1d.rs  gpu_vs_cpu.rs  multidim_parallel.rs  prime_sizes.rs
oxifft/examples/: autodiff_fft.rs  batch_fft.rs  convolution.rs  multidimensional.rs  nufft_example.rs  real_fft.rs  signal_processing.rs  simple_fft.rs  sparse_fft.rs  streaming_fft.rs  wisdom_usage.rs
oxifft/fuzz/: Cargo.toml
oxifft/fuzz/fuzz_targets/: plan_create.rs  r2c_roundtrip.rs  wisdom_parse.rs
oxifft/pkg_simd/: oxifft.d.ts  oxifft.js  oxifft_bg.wasm  oxifft_bg.wasm.d.ts
oxifft/proptest-regressions/rdft/solvers/: r2r.txt
oxifft/src/: assertions.rs  lib.rs  prelude.rs
oxifft/src/api/: execute.rs  memory.rs  mod.rs  parallel.rs  types.rs  wisdom.rs
oxifft/src/api/plan/: auto_tune.rs  debug_impls.rs  functions.rs  functions_2.rs  mod.rs  types.rs  types_guru.rs  types_nd.rs  types_r2r.rs  types_real.rs  types_split.rs
oxifft/src/autodiff/: mod.rs
oxifft/src/chirp_z/: chirp_tables.rs  mod.rs  tests.rs
oxifft/src/compat/: mod.rs
oxifft/src/const_fft/: mod.rs  radix2.rs  twiddle.rs
oxifft/src/conv/: mod.rs
oxifft/src/dft/: mod.rs  plan.rs  problem.rs
oxifft/src/dft/codelets/: codegen_tests.rs  generated_simd.rs  hand_avx512.rs  hand_avx512_tests.rs  hand_avx512_twiddles.rs  mod.rs  notw.rs  simd.rs  simd_codelet_tests.rs  twiddle.rs  twiddle_odd.rs  winograd.rs  winograd_constants.rs  winograd_pfa.rs
oxifft/src/dft/codelets/composite/: functions.rs  functions_2.rs  functions_3.rs  functions_4.rs  mod.rs
oxifft/src/dft/codelets/simd/: backends.rs  large_sizes.rs  mod.rs  small_sizes.rs  tests.rs
oxifft/src/dft/solvers/: bluestein.rs  buffered.rs  cache_oblivious.rs  ct.rs  direct.rs  generic.rs  indirect.rs  mod.rs  nop.rs  rader.rs  rank_geq2.rs  simd_butterfly.rs  vrank_geq1.rs
oxifft/src/dft/solvers/stockham/: aarch64.rs  generic.rs  mod.rs  x86_64.rs
oxifft/src/frft/: mod.rs
oxifft/src/gpu/: backend.rs  batch.rs  buffer.rs  cuda.rs  error.rs  metal.rs  mod.rs  plan.rs  pool.rs
oxifft/src/integrations/: mod.rs  ndarray_ext.rs  ndarray_tests.rs
oxifft/src/kernel/: complex.rs  complex_mul.rs  f128_type.rs  f16.rs  flags.rs  float.rs  hash.rs  mod.rs  ops.rs  plan.rs  planner.rs  primes.rs  problem.rs  rader_omega.rs  solver.rs  tensor.rs  trig.rs  twiddle.rs
oxifft/src/kernel/twiddle/: mod.rs  twiddle_tests.rs
oxifft/src/mpi/: distribution.rs  error.rs  local_size.rs  mod.rs  pool.rs  transpose.rs
oxifft/src/mpi/plans/: mod.rs  plan_2d.rs  plan_3d.rs  plan_3d_pencil.rs  plan_nd.rs
oxifft/src/ntt/: arith.rs  error.rs  mod.rs  plan.rs  tests.rs
oxifft/src/nufft/: mod.rs  nufft2d.rs  nufft3d.rs
oxifft/src/pruned/: input_pruned.rs  mod.rs  output_pruned.rs  partial.rs  partial_tests.rs  plan.rs
oxifft/src/rdft/: mod.rs  plan.rs  problem.rs
oxifft/src/rdft/codelets/: codegen_tests.rs  generated.rs  mod.rs  real_twiddle.rs
oxifft/src/rdft/solvers/: c2r.rs  hc2c.rs  hc2hc.rs  mod.rs  r2c.rs  r2r.rs  rank_geq2.rs  types_r2r.rs  vrank_geq1.rs
oxifft/src/reodft/: dht.rs  mod.rs  redft.rs  rodft.rs
oxifft/src/signal/: cepstrum.rs  hilbert.rs  mod.rs  resample.rs  spectral.rs
oxifft/src/simd/: avx.rs  avx2.rs  avx512.rs  detect.rs  mod.rs  neon.rs  portable.rs  scalar.rs  sse2.rs  sve.rs  traits.rs
oxifft/src/sparse/: bucket.rs  decoder.rs  filter.rs  hash.rs  mod.rs  plan.rs  problem.rs  result.rs
oxifft/src/streaming/: mel.rs  mod.rs  sdft.rs  stft.rs  window.rs
oxifft/src/support/: align.rs  copy.rs  debug.rs  mod.rs  scratch.rs  transpose.rs
oxifft/src/threading/: mod.rs  parallel_config.rs  rayon_impl.rs  serial.rs  spawn.rs  work_stealing.rs
oxifft/src/wasm/: bindings.rs  mod.rs  simd.rs
oxifft/tests/: guru_plan.rs  nufft_tolerance_sweep.rs  plan_delegation.rs  plan_fuzz.rs  r2r_fast.rs  rustfft_comparison.rs  send_sync.rs  size_coverage.rs  split_complex.rs  streaming_48khz.rs  wisdom_stress.rs
scripts/: bench_check.sh  fftw_ratio_report.sh
(+5 files in other folders)
