[workspace]
resolver = "2"
members = ["oxifft", "oxifft-codegen", "oxifft-bench"]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["COOLJAPAN OU (Team KitaSan)"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/oxifft"
keywords = ["fft", "fftw", "dft", "signal-processing", "simd"]
categories = ["algorithms", "science", "mathematics"]

[workspace.dependencies]
# Core numeric types (no_std compatible)
num-complex = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

# Serialization for wisdom (no_std compatible with alloc)
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"

# Hashing for wisdom (no_std compatible)
seahash = "4.1"

# no_std support
hashbrown = "0.16"
spin = { version = "0.10", default-features = false, features = ["spin_mutex", "rwlock", "once", "lazy"] }
libm = "0.2"

# Threading
rayon = "1.11"

# MPI distributed computing
mpi = "0.8"

# System interface (for SVE detection)
libc = "0.2"

# Proc macro support
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

# Testing
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.9"
approx = "0.5"
rustfft = "6.4"

# FFTW bindings (optional, for benchmarking only)
fftw = "0.8"

# WebAssembly support
wasm-bindgen = "0.2"
js-sys = "0.3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
