[workspace]
resolver = "2"
members = ["oxifft", "oxifft-codegen", "oxifft-codegen-impl", "oxifft-bench"]
exclude = ["oxifft/fuzz"]

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["COOLJAPAN OU (Team KitaSan)"]
license = "Apache-2.0"
repository = "https://github.com/cool-japan/oxifft"
rust-version = "1.75"
keywords = ["fft", "fftw", "dft", "signal-processing", "simd"]
categories = ["algorithms", "science", "mathematics"]

[workspace.dependencies]
# Core numeric types (no_std compatible)
num-complex = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

# Serialization for wisdom (no_std compatible with alloc)
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"

# Hashing for wisdom (no_std compatible)
seahash = "4.1"

# no_std support
hashbrown = "0.17"
spin = { version = "0.10", default-features = false, features = ["spin_mutex", "rwlock", "once", "lazy"] }
libm = "0.2"

# Threading
rayon = "1.12"

# MPI distributed computing
mpi = "0.8"

# System interface (for SVE detection)
libc = "0.2"

# Proc macro support
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

# Internal codegen logic (not proc-macro)
oxifft-codegen-impl = { version = "0.3.1", path = "oxifft-codegen-impl" }

# Testing
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.11"
approx = "0.5"
rustfft = "6.4"

# FFTW bindings (optional, for benchmarking only)
fftw = "0.8"

# WebAssembly support
wasm-bindgen = "0.2"
js-sys = "0.3"

# oxicuda GPU backends
oxicuda-driver = { version = "0.1.4" }
oxicuda-fft = { version = "0.1.4" }
oxicuda-metal = { version = "0.1.4" }

# ndarray integration (opt-in via ndarray feature)
ndarray = "0.17.2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
