[package]
name = "oxifft-codegen"
description = "Procedural macro crate for OxiFFT codelet generation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/cool-japan/oxifft"
documentation = "https://docs.rs/oxifft-codegen"
readme = "README.md"
keywords = ["fft", "codegen", "proc-macro", "simd"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
