[package]
name = "oxifft"
description = "Pure Rust implementation of FFTW - the Fastest Fourier Transform in the West"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/cool-japan/oxifft"
documentation = "https://docs.rs/oxifft"
readme = "README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [
    "benches/",
    "tests/",
    "fuzz/",
    "proptest-regressions/",
    ".github/",
    "docs/",
    "scripts/",
    "BENCHMARK_RESULTS_TEMPLATE.md",
    "BENCHMARKING.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "PERFORMANCE_ANALYSIS.md",
    "PROJECT_STATUS.md",
    "TESTING.md",
    "TODO.md",
    "oxifft.md",
]

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
seahash.workspace = true
hashbrown.workspace = true
spin.workspace = true
libm.workspace = true
rayon = { workspace = true, optional = true }
mpi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
oxifft-codegen = { version = "0.3.1", path = "../oxifft-codegen" }
oxicuda-driver = { workspace = true, optional = true }
oxicuda-fft = { workspace = true, optional = true }
oxicuda-metal = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
approx.workspace = true
rustfft.workspace = true

[features]
default = ["std", "threading"]
# Standard library support (enables file I/O, timing, etc.)
std = ["dep:serde_json", "num-complex/std", "num-traits/std", "serde/std"]
# Threading support (requires std)
threading = ["std", "dep:rayon"]
simd = []
avx512 = []
# Quad-precision (128-bit) floating-point support (pure Rust)
f128-support = []
# Half-precision (16-bit) floating-point support (pure Rust)
f16-support = []
# MPI distributed computing support (requires MPI library)
mpi = ["dep:mpi"]
# Sparse FFT support (O(k log n) for k-sparse signals)
sparse = []
# Pruned FFT support (partial input/output computation)
pruned = []
# ARM SVE (Scalable Vector Extension) support
sve = []
# WebAssembly support
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
# Streaming FFT support (STFT, window functions, overlap-add)
streaming = []
# Compile-time FFT with const generics
const-fft = []
# GPU support (CUDA backend for NVIDIA GPUs)
cuda = ["dep:oxicuda-driver", "dep:oxicuda-fft"]
# GPU support (Metal backend for Apple GPUs)
metal = ["dep:oxicuda-metal"]
# GPU support (enables both CUDA and Metal when available)
gpu = ["cuda", "metal"]
# Signal processing: Hilbert transform, PSD (Welch's method), cepstral analysis
signal = ["std"]
# FFTW-compatible API surface (thin wrappers with FFTW-style names)
fftw-compat = []
# ndarray integration — FFT extension traits for ndarray arrays
ndarray = ["dep:ndarray"]

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["oxifft-codegen", "spin"]
development = ["approx", "proptest"]

[[bin]]
name = "oxifft_tune"
path = "src/bin/oxifft_tune.rs"
required-features = ["std"]

[[bench]]
name = "dft_1d"
harness = false

[[bench]]
name = "cooley_tukey_scaling"
harness = false

[[bench]]
name = "multidim_parallel"
harness = false
required-features = ["threading"]

[[bench]]
name = "beyond_fftw"
harness = false
required-features = ["sparse", "pruned", "streaming", "const-fft"]

[[bench]]
name = "prime_sizes"
harness = false

[[bench]]
name = "gpu_vs_cpu"
harness = false
required-features = ["gpu"]

[[bench]]
name = "dct_benchmarks"
harness = false

[[example]]
name = "sparse_fft"
required-features = ["sparse"]

[[example]]
name = "streaming_fft"
required-features = ["streaming"]

[[example]]
name = "signal_processing"
required-features = ["signal"]
